# webstat

./: .gitignore  CLAUDE.md  Cargo.toml  PRD.md  README.md  webstat.yml  webstat.yml.example
.github/workflows/: release.yml
assets/: app.js  style.css
src/: compression.rs  config.rs  database.rs  fingerprint.rs  geo.rs  hll.rs  logging.rs  main.rs  method_proto.rs  parser.rs  processor.rs  progress.rs  reports.rs  run_accumulators.rs  topn.rs  ua.rs  util.rs
src/database/: maintenance.rs  parse_state.rs  tests.rs  visit_state.rs  writer.rs
src/fingerprint/: tests.rs
src/geo/: tests.rs
src/hll/: tests.rs
src/parser/: tests.rs
src/processor/: aggregation.rs  flush.rs  parallel.rs  progress_seed.rs  readers.rs  resume_policy.rs  tests.rs
src/progress/: tests.rs
src/reports/: aggregator.rs  charts.rs  tests.rs
src/reports/aggregator/: tests.rs
src/run_accumulators/: tests.rs
src/topn/: tests.rs
src/ua/: tests.rs
src/util/: tests.rs
templates/: index.html.tera  layout.html.tera  month.html.tera  year.html.tera
