[package]
name = "webstat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "webstat"
path = "src/main.rs"

[dependencies]
ahash        = "0.8"
anyhow       = "1"
clap         = { version = "4", features = ["derive"] }
bzip2         = "0.4"
flate2        = "1.0"
glob          = "0.3"
maxminddb    = "0.24"
memchr       = "2"
regex        = "1"
rayon        = "1"
rusqlite     = { version = "0.31", features = ["bundled"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_yaml   = "0.9"
tera         = "1"
chrono       = { version = "0.4", default-features = true }
twox-hash    = "2.1"
woothee      = "0.13"

[dev-dependencies]
tempfile     = "3"

[profile.release]
lto           = true       # link-time optimisation across crates
codegen-units = 1          # maximise inlining at the cost of compile time
opt-level     = 3
strip         = "symbols"  # smaller binary
